# Blogging-Website

./: .gitignore  pyproject.toml
accounts/: forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_newuser_user.py
blog/: admin.py  forms.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_blog_alter_post_meta_data.py
config/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
templates/: home.html  main.html  navbar.html  register.html
templates/accounts/: dashboard.html  login.html  main.html  profile.html  register.html
templates/blog/: addPost.html
