[tool.poetry]
name = "blogs"
version = "0.1.0"
description = ""
authors = ["ksonawat007 <ssks81285@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
djongo = "^1.3.6"
pytz = "^2021.3"
pymongo = "3.12.1"
python-decouple = "^3.6"
Django = "3.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
